# pdf2dwg

./: .gitignore  BZA101.1.4.2-1.dwl  BZA101.1.4.2-1.dwl2  README.md  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
src/pdf2dwg/: __init__.py  cli.py  converter.py  dwg_converter.py  dxf_writer.py  pdf_extractor.py
src/pdf2dwg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
