[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2dwg"
version = "1.2.1"
description = "Convert PDF files to DXF format for AutoCAD - preserving all graphics and text"
readme = "README.md"
license = {text = "GNU General Public License v3 (GPLv3)"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "PyMuPDF>=1.23.0",
    "ezdxf>=1.1.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# Advanced math features for better ellipse fitting
scipy = [
    "scipy>=1.10.0",
]

[project.scripts]
pdf2dwg = "pdf2dwg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
